Update new info

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,2 +1,21 @@
 ---
 ---
+@article{wen2023does,
+  title={Emergence of Shape Bias in Convolutional Neural Networks through Activation Sparsity (Coming Soon)},
+  author={Li, Tianqin and Wen, Ziqi and Yangfan Li and Lee, Tai Sing},
+  journal={Advances in Neural Information Processing Systems (Oral)},
+  year={2023},
+  preview={sparse_activation.png},
+  selected={true}
+}
+
+
+@article{wen2023does,
+  title={Does resistance to Style-Transfer equal Shape Bias? Evaluating Shape Bias by Distorted Shape},
+  author={Wen, Ziqi and Li, Tianqin and Lee, Tai Sing},
+  journal={arXiv preprint arXiv:2310.07555},
+  year={2023},
+  arxiv={https://arxiv.org/abs/2310.07555},
+  preview={DiST.png},
+  selected={true}
+}
