--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,11 +1,13 @@
 ---
 ---
 @article{wen2023does,
-  title={Emergence of Shape Bias in Convolutional Neural Networks through Activation Sparsity (Coming Soon)},
+  title={Emergence of Shape Bias in Convolutional Neural Networks through Activation Sparsity},
   author={Li, Tianqin and Wen, Ziqi and Yangfan Li and Lee, Tai Sing},
   journal={Advances in Neural Information Processing Systems (Oral)},
   year={2023},
   preview={sparse_activation.png},
+  arxiv={2310.18894},
+  code={https://github.com/Crazy-Jack/nips2023_shape_vs_texture},
   selected={true}
 }
 
@@ -15,7 +17,7 @@
   author={Wen, Ziqi and Li, Tianqin and Lee, Tai Sing},
   journal={arXiv preprint arXiv:2310.07555},
   year={2023},
-  arxiv={https://arxiv.org/abs/2310.07555},
+  arxiv={2310.07555},
   preview={DiST.png},
   selected={true}
 }
