--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -12,11 +12,12 @@
 }
 
 @article{wen2023does,
-  title={Does resistance to Style-Transfer equal Shape Bias? Evaluating Shape Bias by Distorted Shape},
-  author={Wen, Ziqi and Li, Tianqin and Lee, Tai Sing},
-  journal={arXiv preprint arXiv:2310.07555},
-  year={2023},
+  title={Does resistance to style-transfer equal Global Shape Bias? Measuring network sensitivity to global shape configuration},
+  author={Wen, Ziqi and Li, Tianqin, Jing, Zhi and Lee, Tai Sing},
+  journal={ICLR 2024 Workshop on Representational Alignment},
+  year={2024},
   arxiv={2310.07555},
   preview={DiST.png},
+  code={https://github.com/starsky77/DiST},
   selected={true}
 }
