--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,19 +1,21 @@
 ---
 ---
-@article{wen2023does,
+@article{li2024emergence,
   title={Emergence of Shape Bias in Convolutional Neural Networks through Activation Sparsity},
-  author={Li, Tianqin and Wen, Ziqi and Yangfan Li and Lee, Tai Sing},
-  journal={Advances in Neural Information Processing Systems (Oral)},
-  year={2023},
+  author={Li, Tianqin and Wen, Ziqi and Li, Yangfan and Lee, Tai Sing},
+  journal={Advances in Neural Information Processing Systems},
+  volume={36},
+  year={2024},
   preview={sparse_activation.png},
   arxiv={2310.18894},
   code={https://github.com/Crazy-Jack/nips2023_shape_vs_texture},
   selected={true}
 }
 
-@article{wen2023does,
+
+@article{wen2024does,
   title={Does resistance to style-transfer equal Global Shape Bias? Measuring network sensitivity to global shape configuration},
-  author={Wen, Ziqi and Li, Tianqin, Jing, Zhi and Lee, Tai Sing},
+  author={Wen, Ziqi and Li, Tianqin and Jing, Zhi and Lee, Tai Sing},
   journal={ICLR 2024 Workshop on Representational Alignment},
   year={2024},
   arxiv={2310.07555},
