--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,7 +3,7 @@
 @article{li2024emergence,
   title={Emergence of Shape Bias in Convolutional Neural Networks through Activation Sparsity},
   author={Li, Tianqin and Wen, Ziqi and Li, Yangfan and Lee, Tai Sing},
-  journal={Advances in Neural Information Processing Systems},
+  journal={Advances in Neural Information Processing Systems (Oral)},
   volume={36},
   year={2024},
   preview={sparse_activation.png},
