--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,11 +1,22 @@
 ---
 ---
-@article{li2024emergence,
+
+@article{wen2025predicting,
+  title={Predicting Reaction Time to Comprehend Scenes with Foveated Scene Understanding Maps},
+  author={Wen, Ziqi and Skaza, Jonathan and Murlidaran, Shravan and Wang, William Y and Eckstein, Miguel P},
+  journal={arXiv preprint arXiv:2505.12660},
+  preview={F-SUM.png},
+  arxiv={2505.12660},
+  year={2025}
+}
+
+@article{li2023emergence,
   title={Emergence of Shape Bias in Convolutional Neural Networks through Activation Sparsity},
   author={Li, Tianqin and Wen, Ziqi and Li, Yangfan and Lee, Tai Sing},
   journal={Advances in Neural Information Processing Systems (Oral)},
   volume={36},
-  year={2024},
+  year={2023},
+  pages={71755--71766},
   preview={sparse_activation.png},
   arxiv={2310.18894},
   code={https://github.com/Crazy-Jack/nips2023_shape_vs_texture},
