--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,23 @@
 ---
 ---
 
+@article{murlidaransemantic,
+  title={Semantic Saliency from Multi-Modal Large Language Model Scene Understanding Maps},
+  author={Murlidaran, Shravan and Wen, Ziqi and Skaza, Jonathan and Wang, William and Eckstein, Miguel P},
+  preview={ASUM.png},
+  publisher={OSF}
+}
+
+@article{skaza2025deep,
+  title={A Deep Learning Framework for Predicting Functional Visual Performance in Bionic Eye Users},
+  author={Skaza, Jonathan and Murlidaran, Shravan and Varshney, Apurv and Wen, Ziqi and Wang, William and Eckstein, Miguel P and Beyeler, Michael},
+  journal={bioRxiv},
+  pages={2025--06},
+  year={2025},
+  preview={CVP.png},
+  publisher={Cold Spring Harbor Laboratory}
+}
+
 @article{wen2025predicting,
   title={Predicting Reaction Time to Comprehend Scenes with Foveated Scene Understanding Maps},
   author={Wen, Ziqi and Skaza, Jonathan and Murlidaran, Shravan and Wang, William Y and Eckstein, Miguel P},
