--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,21 +1,13 @@
 ---
 ---
 
-@article{murlidaransemantic,
-  title={Semantic Saliency from Multi-Modal Large Language Model Scene Understanding Maps},
-  author={Murlidaran, Shravan and Wen, Ziqi and Skaza, Jonathan and Wang, William and Eckstein, Miguel P},
-  preview={ASUM.png},
-  publisher={OSF}
-}
-
 @article{skaza2025deep,
   title={A Deep Learning Framework for Predicting Functional Visual Performance in Bionic Eye Users},
   author={Skaza, Jonathan and Murlidaran, Shravan and Varshney, Apurv and Wen, Ziqi and Wang, William and Eckstein, Miguel P and Beyeler, Michael},
   journal={bioRxiv},
   pages={2025--06},
   year={2025},
-  preview={CVP.png},
-  publisher={Cold Spring Harbor Laboratory}
+  preview={CVP.png}
 }
 
 @article{wen2025predicting,
