Update new paper

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,24 @@
 ---
 ---
 
+@article{skaza2025drex,
+  title={DReX: Pure Vision Fusion of Self-Supervised and Convolutional Representations for Image Complexity Prediction},
+  author={Skaza, Jonathan and Madinei, Parsa and Wen, Ziqi and Eckstein, Miguel},
+  journal={arXiv preprint arXiv:2511.16991},
+  year={2025},
+  preview={DRex.png},
+  arxiv={2511.16991}
+}
+
+@article{madinei2025interlace,
+  title={INTERLACE: Interleaved Layer Pruning and Efficient Adaptation in Large Vision-Language Models},
+  author={Madinei, Parsa and Solgi, Ryan and Wen, Ziqi and Skaza, Jonathan and Eckstein, Miguel and Pedarsani, Ramtin},
+  journal={arXiv preprint arXiv:2511.19676},
+  year={2025},
+  preview={INTERLACE.png},
+  arXiv={2511.19676}
+}
+
 @article{skaza2025deep,
   title={A Deep Learning Framework for Predicting Functional Visual Performance in Bionic Eye Users},
   author={Skaza, Jonathan and Murlidaran, Shravan and Varshney, Apurv and Wen, Ziqi and Wang, William and Eckstein, Miguel P and Beyeler, Michael},
